# Financial-Time-Series-Forecasting-with-GNN

./: .dockerignore  .gitignore  Dockerfile  README.md  alpha_sweep.py  compare_models.py  main.py  pyproject.toml  requirements.txt  stock_analysis.py
MultiAgent/: graph.py  orchestrator.py  requirements.txt  (+1 more)
THGNN/: .gitignore  CODEBASE_EXPLANATION.md  LEAKAGE_ANALYSIS_REPORT.md  QUICK_FIX_GUIDE.md  README.md  SOLUTION_README.md  THESIS_MODEL_PIPELINE_DOCUMENTATION.md  backtest.py  check_itc.py  check_leakage.py  data_loader.py  diagnostic_output.txt  explain_itc.py  indices_full_range.txt  itc.txt  itc_final_report.txt  itc_report.txt  leakage.txt  main copy.py  main.py  main_advanced.py  main_corr.py  new_main.py  not_working_requirements.txt  out2.txt  patch.txt  plot_best_stock.py  plot_date_range.py  plot_live_predictions.py  plot_top_5_stocks.py  plot_top_5_stocks_icrank.py  presentation.tex  pyproject.toml  rebuild_graph_data.py  requirements.txt  run_icrank_tuning.py  simple_download.py  train_ic_ranked.py  train_improved.py  train_paper_bce.py  (+3 more)
THGNN/data/: valid_nifty500.txt
THGNN/data/backtest_results/backtest_20260222_212406/: metrics_report.txt
THGNN/data/backtest_results/backtest_20260223_143005/: metrics_report.txt
THGNN/data/data_train_predict/: 2015-01-30.pkl  2015-02-02.pkl  2015-02-03.pkl  2015-02-04.pkl  2015-02-05.pkl  2015-02-06.pkl  2015-02-09.pkl  2015-02-10.pkl  2015-02-11.pkl  2015-02-12.pkl  2015-02-13.pkl  2015-02-16.pkl  2015-02-18.pkl  2015-02-19.pkl  2015-02-20.pkl  2015-02-23.pkl  2015-02-24.pkl  2015-02-25.pkl  2015-02-26.pkl  2015-02-27.pkl  2015-03-02.pkl  2015-03-03.pkl  2015-03-04.pkl  2015-03-05.pkl  2015-03-09.pkl  2015-03-10.pkl  2015-03-11.pkl  2015-03-12.pkl  2015-03-13.pkl  2015-03-16.pkl  2015-03-17.pkl  2015-03-18.pkl  2015-03-19.pkl  2015-03-20.pkl  2015-03-23.pkl  2015-03-24.pkl  2015-03-25.pkl  2015-03-26.pkl  2015-03-27.pkl  2015-03-30.pkl  (+2654 more)
THGNN/data/plots/: 2023-12-29_hybrid_summary.json  2023-12-29_hybrid_train.txt  2023-12-29_mamba_moe_summary.json  2023-12-29_mamba_moe_train.txt  2023-12-29_thgnn_summary.json  2023-12-29_thgnn_train.txt
THGNN/model/: Thgnn.py  Thgnn_flexible.py
THGNN/presentation/: ARCHITECTURE_CHANGES.md  presentation.tex
THGNN/presentation/diagrams/: 01_thgnn_pipeline.drawio  02_data_pipeline.drawio  03_stock_correlation_graph.drawio  04_architecture_evolution.drawio  05_standard_vs_hypergraph.drawio
THGNN/trainer/: trainer.py
THGNN/utils/: download_market_data.py  filter_nifty500.py  generate_data.py  generate_relation.py
THGNN_Mamba_MoE/: ARCHITECTURE.md  README.md  backtest_hybrid.py  data_loader.py  main.py  plot_live_predictions.py  pyproject.toml  requirements.txt  train_hybrid.py
THGNN_Mamba_MoE/model/: hybrid_model.py
(+57 files in other folders)
