[project]
name = "thgnn-mamba-moe"
version = "0.1.0"
description = "Hybrid THGNN x MaGNet variant using Mamba plus MoE temporal blocks"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "torch>=2.0.0",
    "tqdm>=4.67.3",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
